--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.1",
-    "morgan": "^1.10.0"
+    "express-validator": "^6.14.2",
+    "morgan": "^1.10.0",
+    "slugify": "^1.6.5"
   }
 }
